--- a/app/src/main/res/layout/item_customer_list.xml
+++ b/app/src/main/res/layout/item_customer_list.xml
@@ -2,11 +2,10 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
-    android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="0dp">
+    android:layout_marginTop="8dp"
+    app:cardCornerRadius="0dp"
+    android:layout_marginBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
