--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -51,14 +51,14 @@
         app:layout_constraintStart_toStartOf="@+id/btn_logout"
         app:layout_constraintTop_toBottomOf="@+id/tv_label_logged" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout"
         style="@android:style/Widget.Button"
         android:layout_width="220dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/background_btn2"
+        app:backgroundTint="@color/white"
         android:text="Logout"
         android:textColor="@color/primary"
         android:textSize="22sp"
